--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/moatazelmasry2/softether.js/issues"
   },
-  "homepage": "https://github.com/moatazelmasry2/softether.js#readme"
+  "homepage": "https://github.com/moatazelmasry2/softether.js#readme",
+  "dependencies": {
+    "bluebird": "^3.3.5",
+    "lodash": "^4.11.1"
+  }
 }
